Regression: Blender crashes when you reload a linked library if the active scene is from that library #105230

Closed
opened 2023-02-27 03:32:09 +07:00 by Max-Ewaschuk · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Quadro P1000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.96

Blender Version
Broken: version: 3.3.3, branch: master, commit date: 2023-01-17 08:40, hash: rB8d94aeb604fa
Broken; 3.0
Worked: 2.93.15

Caused by 5225e459da

Short description of error
If your active scene comes from an external .blend file and you reload that library, Blender will crash. This is reproducable through the UI and through the the Python API.

Exact steps for others to reproduce the error

  1. Open Blender and set your active scene to one from an external .blend file.
  2. Reload the external library by going to the 'Scripting' tab and either:
  • On the right-hand side, open the 'Libraries' dropdown, right click on the library and select 'Reload'.
  • In the Python console, run: bpy.data.libraries['LIBRARY NAME'].reload()
  1. Blender crashes.

The attached zip includes a main project file (main.blend) using a scene from an external library (linked-lib.blend), as well as a readme (readme.txt) reiterating the reproduction steps above and a crash report file (main.crash.txt).

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Quadro P1000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.96 **Blender Version** Broken: version: 3.3.3, branch: master, commit date: 2023-01-17 08:40, hash: `rB8d94aeb604fa` Broken; 3.0 Worked: 2.93.15 Caused by 5225e459da **Short description of error** If your active scene comes from an external `.blend` file and you reload that library, Blender will crash. This is reproducable through the UI and through the the Python API. **Exact steps for others to reproduce the error** 1. Open Blender and set your active scene to one from an external `.blend` file. 2. Reload the external library by going to the 'Scripting' tab and either: - On the right-hand side, open the 'Libraries' dropdown, right click on the library and select 'Reload'. - In the Python console, run: bpy.data.libraries['LIBRARY NAME'].reload() 3. Blender crashes. The attached zip includes a main project file (main.blend) using a scene from an external library (linked-lib.blend), as well as a readme (readme.txt) reiterating the reproduction steps above and a crash report file (main.crash.txt).
Max-Ewaschuk added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-02-27 03:32:10 +07:00

Can confirm, will check.

Can confirm, will check.
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-02-27 11:22:22 +07:00

Caused by 5225e459da

CC @mont29

Caused by 5225e459da07b10b5d1a77f74fed2d3df1fee594 CC @mont29
Philipp Oeser changed title from Blender crashes when you reload a linked library if the active scene is from that library to Regression: Blender crashes when you reload a linked library if the active scene is from that library 2023-02-27 12:20:23 +07:00
Philipp Oeser added
Priority
High
Module
Core
and removed
Priority
Normal
labels 2023-02-27 12:20:41 +07:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-27 14:13:47 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105230
There is no content yet.