Fix #105230: Crash when reloading a library when one of its scene is active.

Scene and viewlayers pointers in the link/append context data need to be
updated after reload, otherwise they would keep pointing to old freed
IDs.